fixed alignment

--- a/src/events/events.module.css
+++ b/src/events/events.module.css
@@ -56,7 +56,7 @@
   letter-spacing: 0.1vw;
   font-size: 10pt;
   font-family: "Montserrat", sans-serif;
-  text-align: center;
+  text-align: justify;
   font-weight: 300;
   padding: 0;
   padding-bottom: 5px;
